--- a/index.html
+++ b/index.html
@@ -3,10 +3,26 @@
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>New developer portfolio</title>
+        <title> Ashraf New developer portfolio</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-        
+        <section class="top-banner">
+                <div class="header-part">
+                        <div class="text-part">
+                           <h1>Welcome To</h1>
+                        <h1><span class="orange-color">Peter parker</span> World</h1>
+                        <h3>build climber and train stopper</h3>
+                        <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+                        <a href="" class="button">HIRE ME</a>
+                        </div>
+                        <div class="image-part">
+                           <img src="images/my-bg.png" alt="">
+                        </div>
+                   </div>
+        </section>
 </body>
 </html>
