--- a/index.html
+++ b/index.html
@@ -17,12 +17,26 @@
                         <h1><span class="orange-color">Peter parker</span> World</h1>
                         <h3>build climber and train stopper</h3>
                         <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
-                        <a href="" class="button">HIRE ME</a>
+                        <a href="" target="_blank" class="button">HIRE ME</a>
                         </div>
                         <div class="image-part">
                            <img src="images/my-bg.png" alt="">
                         </div>
                    </div>
+        </section>
+        <section class="dream-big">
+                <div class="header-part">
+                        <div class="image-part">
+                                <img src="images/my-bg2 (1).png" alt="">   
+                           </div>
+                           <div class="text-part">
+                                   <h1>Dream Big</h1>
+                                   <h2>Become a web developer</h2>
+                                   <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+                                   <a href="" target="_blank" class="button">Download Resume</a>
+                           </div>
+                </div>
+
         </section>
 </body>
 </html>
